--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/router": "^16.1.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@ng-select/ng-select": "^11.1.1",
+    "angularx-qrcode": "^16.0.2",
+    "bwip-js": "^4.1.1",
+    "jsbarcode": "^3.11.5",
+    "ngx-barcode6": "^1.0.23",
     "ngx-export-as": "^1.16.0",
     "ngx-mask": "^16.3.1",
     "rxjs": "~7.8.0",
@@ -33,6 +37,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.18",
+    "@types/qrcode": "^1.5.2",
     "concurrently": "^8.2.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
