--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-barcode6": "^1.0.23",
     "ngx-export-as": "^1.16.0",
     "ngx-mask": "^16.3.1",
+    "ngx-print": "^1.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
